--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
+python-decouple
+telethon
+ethon==1.3.7
 cryptg
-ethon==1.3.8 #for VC
+pymongo
+motor
+pymongo[srv]
+dnspython
+telegraph
+Pillow>=5.3.0
+requests
+heroku3
 ffmpeg-python
 tgcrypto
