--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-python-decouple
-telethon
-ethon==1.3.7
+https://github.com/vasusen-code/Telethon/archive/refs/tags/v1.24.0.zip
 cryptg
-pymongo
-motor
-pymongo[srv]
 dnspython
-telegraph
-Pillow>=5.3.0
-requests
+ethon==1.3.8 #for VC
 heroku3
-ffmpeg-python
+motor
+Pillow>=5.3.0
+pymongo
+pymongo[srv]
+requests
+telegraph
 tgcrypto
